# pyms-agilent

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: octocheese.yml
doc-source/: Source.rst  conf.py  index.rst  license.rst
