[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyms-agilent"
version = "0.1.2"
description = "PyMassSpec interface to Agilent .d datafiles"
readme = "README.rst"
keywords = [ "chemistry", "chromatography", "mass-spectrometry",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/pyms-agilent"
"Issue Tracker" = "https://github.com/PyMassSpec/pyms-agilent/issues"
"Source Code" = "https://github.com/PyMassSpec/pyms-agilent"
Documentation = "https://pyms-agilent.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
package = "pyms_agilent"
additional-files = [
    "recursive-include pyms_agilent/xml_parser/agilent_xsd *.xsd",
    "include pyms_agilent/mhdac/mhdac.zip",
]

[tool.dep_checker]
allowed_unused = [ "pythonnet", "cftime",]

[tool.sphinx-pyproject]
github_username = "PyMassSpec"
github_repository = "pyms-agilent"
author = "Dominic Davis-Foster"
project = "pyms-agilent"
copyright = "2019-2021 Dominic Davis-Foster"
language = "en"
package_root = "pyms_agilent"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "enum_tools.autoenum",
    "attr_utils.annotations",
    "attr_utils.autoattrs",
    "chemistry",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "attr_utils.mypy_plugin",]

[tool.dep_checker.name_mapping]
pymassspec = "pyms"
attrs = "attr"
